05.03.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Deleting bytes
     * simplifying code (is_in_sequence not needed when a boolean values already
       indicates the presence or not).

03.03.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Working on deleting bytes in buffers

28.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Memory allocation bug corrected
     * "Fancier" libfcltest output

27.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Bug corrections.
     * Freeying memory.
     * Real size of the read buffer (or overwritten buffer).
     * Debug option to the configure script.
     * Killing max buffer size limit.

26.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Now reading seems ok, even when reading at the end of a file
     * Basic overwriting seems to work (need to do inserts to be able to test
       it more)

20.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Reading is ok (merly - still need to do the in between two buffers)
     * overwriting is now at a begining
     * Roadmap change ;-) !

19.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Trying to do something with buffers

17.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * heading to a buffer management style

16.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Trying to get things simpler

02.01.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Removed all complex stuff !

28.11.2010
   - Olivier Delhomme <olivier.delhomme@free.fr>
      * I do not know where I am going but it's for sure somwhere !!

23.11.2010
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Working on buffers

22.11.2010
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * ChangeLog corrections
     * Documentation of the API
     * Begining work on functions to enable writes to the file

12.10.2010
   - Olivier Delhomme <olivier.delhomme@free.fr>